# mango_python

./: .gitignore  MgImageProcess.py  pyproject.toml  setup.py
mango_python/: __init__.py  ct.py  data_process.py  files.py  plot_figure.py  x_ray.py
mango_python/mu_data/: Al.txt  CdTe.txt  GaAs.txt  HAP.txt  PMMA.txt  Si.txt  tissue.txt  water.txt
