[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mango_python"
version = "0.0.2"
description = "Personal python package"
dependencies = [
    "matplotlib",
    "numpy"
]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools]
include-package-data = true
