# editable install using compat mode:
#     pip install -e . --config-settings editable_mode=compat

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mango_python"
version = "0.0.8"
description = "Personal python package"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "scipy",
    "pandas",
]

[tool.setuptools]
packages = ["mango_python"]

[tool.setuptools.package-data]
mango_python = ["mu_data/*.txt"]
